# tf-jepa

./: .gitignore  README.md  index.html  main.py  main_ray.py  pyproject.toml
.github/workflows/: deploy.yml
baselines/normwear/: .gitignore  FINETUNE_GUIDE.md  README_FINETUNING.md  download_datasets.sh  finetune_cli.py  look_at_data.py  pretrain_main.py  pyproject.toml  quickstart.sh  setup_environment.sh
baselines/normwear/data/: inspect_pkl.py
baselines/normwear/data/SleepEEG/: .placeholder
baselines/normwear/data_converters/: README.md  __init__.py  convert_emg_data.py  convert_epilespy_data.py  convert_fd_data.py  convert_gesture_data.py  convert_sleepeeg_data.py
baselines/normwear/downstream_pipeline/: config.py  engine_finetune.py  main_finetune.py
baselines/normwear/modules/: patch_embed.py
baselines/normwear/pretrain_pipeline/: dataset.py  engine_pretrain.py  misc.py
baselines/tfc/: EXPERIMENTS.md  QUICKSTART.md  README.md  main.py  (+5 more)
baselines/ts-tcc/: CLI_USAGE.md  README.md  download_datasets.sh  main.py  pyproject.toml  run_experiment.py  run_experiment.sh  setup.sh
baselines/ts-tcc/src/ts_tcc/: knn_classification.py  main.py  utils.py
baselines/ts-tcc/src/ts_tcc/config_files/: ECG_Configs.py  EMG_Configs.py  Epilepsy_Configs.py  Gesture_Configs.py  SleepEEG_Configs.py
baselines/ts-tcc/src/ts_tcc/dataloader/: augmentations.py  dataloader.py
baselines/ts-tcc/src/ts_tcc/models/: model.py
baselines/ts-tcc/src/ts_tcc/trainer/: trainer.py
scripts/: download_datasets.sh  export_to_ray_datasets.py
src/: configs.py  data.py  loss.py  model.py  train.py  utils.py
(+30 files in other folders)
