[project]
name = "normwear"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "pandas>=2.3.0",
    "scikit-learn>=1.7.0",
    "scipy>=1.16.0",
    "tabulate>=0.9.0",
    "tensorboard>=2.19.0",
    "timm>=1.0.16",
    "torch>=2.7.1",
]
